# nuttx-apps

./: .asf.yaml  .codespell-ignore-lines  .codespellrc  .gitignore  .gitmodules  Application.mk  CMakeLists.txt  COPYING  ChangeLog.txt  DISCLAIMER-WIP  Directory.mk  Kconfig  LICENSE  Make.defs  Makefile  MyApps  Nuttx.defs  Nuttx.mk  README  README.md  README.txt  ReleaseNotes.txt  TODO.txt  config.nims  exec_nuttapp.c  exec_nuttapp_list.h  exec_nuttapp_proto.h
audioutils/speexdsp/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile
benchmarks/coremark/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile  add_init_message.patch
benchmarks/coremark-pro/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile
benchmarks/dhrystone/: .gitignore  0001-dry2.2-Fix-malloc-type-mismatch.patch  0002-dhrystone-fix-redefine-warning.patch  CMakeLists.txt  Kconfig  Make.defs  Makefile
benchmarks/fio/: .gitignore  0001-external-fio-fix-compile-warning.patch  0002-external-fio-add-os-nuttx-support.patch  0003-external-fio-modify-smaller-size-for-nuttx.patch  0004-external-fio-fix-runtime-error-by-asan.patch  0005-external-fio-fix-compile-warning.patch  0006-external-fio-reinit-global-var-issue-when-run-multip.patch  0007-external-fio-add-engine-init.patch  0008-fio-fix-memory-leak-run-cpuio.fio.patch  0009-fio-fix-memory-leak-ioengine-filecreate.patch  0010-fio-fix-memory-leak-ioengine-exec.patch  CMakeLists.txt  Kconfig  Make.defs  Makefile
benchmarks/iozone/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile  iozone.patch
benchmarks/superpi/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile
benchmarks/tacle-bench/: .gitignore  0001-tacle-bench-add-makefile-and-all-in-one-main-file.patch  CMakeLists.txt  Kconfig  Make.defs  Makefile  generate_taclebench_c.sh
benchmarks/test-tlb/: .gitignore  0001-test-tlb-port-for-NuttX.patch  CMakeLists.txt  Kconfig  Make.defs  Makefile
benchmarks/tinymembench/: .gitignore  0001-tinymembench-fix-compiling-error-for-NuttX.patch  CMakeLists.txt  Kconfig  Make.defs  Makefile
boot/mcuboot/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile  README.md  mcuboot_agent_main.c  mcuboot_confirm_main.c
canutils/lely-canopen/: .gitignore  0001-NuttX-port.patch  0001-tools-eliminate-multiple-definitions-of-poll-compile.patch  0002-tools-coctl.c-fix-printf-issues.patch  0003-src-co-nmt.c-fix-compilation.patch  0004-tools-coctl.c-add-missing-mutex-init.patch  0005-add-NuttX-support.patch  CMakeLists.txt  Kconfig  Make.defs  Makefile
canutils/libdronecan/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile
canutils/libopencyphal/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile
crypto/libsodium/: .gitignore  0001-fix-multiple-definition-bug-in-libsodium-test.patch  0002-fix-cannot-find-file-sodium-version.h.patch  CMakeLists.txt  Kconfig  Make.defs  Makefile
crypto/libtomcrypt/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile  digit-bit.patch  ltcrypt-flush.patch
crypto/mbedtls/: .gitignore  0001-mbedtls-entropy_poll-use-getrandom-to-get-the-system.patch  0002-mbedtls-add-mbedtls-x509-crt-pool.patch  0003-Fix-MBEDTLS_SSL_DTLS_CONNECTION_ID_COMPAT-warning.patch  0004-mbedtls-cipher-wrap-support-aes-with-keyid.patch  CMakeLists.txt  Kconfig  Make.defs  Makefile
crypto/mbedtls/include/: aes_alt.h  cmac_alt.h  dev_alt.h  md5_alt.h  poly1305_alt.h  ripemd160_alt.h  sha1_alt.h  sha256_alt.h  sha512_alt.h
crypto/mbedtls/source/: aes_alt.c  bignum_alt.c  cmac_alt.c  dev_alt.c  entropy_alt.c  md5_alt.c  poly1305_alt.c  ripemd160_alt.c  sha1_alt.c  sha256_alt.c  sha512_alt.c
crypto/tinycrypt/: .gitignore  0001-TinyCrypt-test-resolve-compile-error.patch  CMakeLists.txt  Kconfig  Make.defs  Makefile
crypto/tinydtls/: .gitignore  CMakeLists.txt  Kconfig
fsutils/inih/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile  Nuttx.defs  Nuttx.mk
graphics/libyuv/: .gitignore  0001-include-libyuv-fix-strict-prototype-warning.patch  CMakeLists.txt  Kconfig  Make.defs  Makefile
graphics/lvgl/: .gitignore  0001-fix-demo-fix-compile-warning.patch  CMakeLists.txt  Kconfig  Make.defs  Makefile  README.md  fbdev.c  fbdev.h  lv_button_interface.c  lv_button_interface.h  lv_conf.h  lv_fs_interface.c  lv_fs_interface.h  lv_keypad_interface.c  lv_keypad_interface.h  lv_lcd_interface.c  lv_lcd_interface.h  lv_tick_interface.c  lv_tick_interface.h  tp.c  tp.h  tp_cal.c  tp_cal.h
graphics/lvgl/lv_conf/: Kconfig
graphics/lvgl/port/: lv_port.c  lv_port.h  lv_port_button.c  lv_port_button.h  lv_port_encoder.c  lv_port_encoder.h  lv_port_fbdev.c  lv_port_fbdev.h  lv_port_keypad.c  lv_port_keypad.h  lv_port_lcddev.c  lv_port_lcddev.h  lv_port_libuv.c  lv_port_libuv.h  lv_port_mem.c  lv_port_mem.h  lv_port_syslog.c  lv_port_syslog.h  lv_port_tick.c  lv_port_tick.h  lv_port_touchpad.c  (+1 more)
interpreters/bas/: .gitignore  CMakeLists.txt  Kconfig  LICENSE  Make.defs  Makefile  Makefile.in  NEWS  Nuttx.mk  README  README.md  README.txt  auto.c  auto.h  autotypes.h  bas.1.in  bas.c  bas.h  bas.pot  bas_auto.c  bas_auto.h  bas_autotypes.h  bas_error.h  bas_fs.c  bas_fs.h  bas_global.c  bas_global.h  bas_main.c  bas_program.c  bas_program.h  bas_programtypes.h  bas_statement.c  bas_statement.h  bas_str.c  bas_str.h  bas_token.c  bas_token.h  bas_token.l  bas_value.c  bas_value.h  (+34 more)
interpreters/berry/: .gitattributes  0001-Fix-Berry-default-port-for-NuttX.patch  0002-Use-NuttX-console-reader.patch  CMakeLists.txt  Kconfig  Make.defs  Makefile
interpreters/jimtcl/: CMakeLists.txt  Kconfig  Make.defs  Makefile
interpreters/lua/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile  Module.mk  nuttx_linit.c
interpreters/mquickjs/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile
interpreters/quickjs/: .gitignore  0001-Disabled-unsupported-feature-on-NuttX.patch  CMakeLists.txt  Kconfig  Make.defs  Makefile  qjsmini.c  quickjs.patch
interpreters/wamr/: .gitignore  0001-Introduce-support-for-NuttX-RTOS.patch  CMakeLists.txt  Kconfig  Make.defs  Makefile  Module.mk  Toolchain.defs  wamr_custom_init.c
(+9005 files in other folders)
